--- a/accordion.css
+++ b/accordion.css
@@ -1,13 +1,3 @@
-/* .panel-heading {
-  background-color: #800000;
-  color: #ffffff;
-}
-
-.panel-body {
-  background-color: #ffcc99;
-  color: black;
-} */
-
 .octocat {
   width: 25%;
   margin-left: 35%;
@@ -20,16 +10,6 @@
   margin-left: 40%
 }
 
-.githubDivs {
-  display: block;
-  float: left;
-}
-
-.intenetDivs {
-  display: block;
-  float: right;
-}
-
 div.gallery {
   margin: 5px;
   float: left;
@@ -38,8 +18,6 @@ div.gallery {
 }
 
 div.gallery img {
-  /* margin-left: 35%; */
-  /* width: 30%; */
   height: auto;
   margin-bottom: auto;
 }
@@ -47,4 +25,8 @@ div.gallery img {
 div.desc {
   padding: 15px;
   text-align: center;
+}
+
+p#introparagraph {
+  max-width: 80%;
 }
